--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -259,6 +259,8 @@
     <string name="ignored">Ignored</string>
     <string name="location">Location</string>
     <string name="update_file_name">Update file name</string>
+    <string name="support_the_project">Support the project</string>
+    <string name="click_to_copy">Click to copy</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
