Allow Video Playback Without Pausing Other Audio
Add new setting to disable audio focus in video player, allowing other apps to play in background while playing videos in the Gallery.

Fixes [Enhancement] Allow Video Playback Without Pausing Other Audio #480

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -261,6 +261,8 @@
     <string name="update_file_name">Update file name</string>
     <string name="support_the_project">Support the project</string>
     <string name="click_to_copy">Click to copy</string>
+    <string name="take_audio_focus_title">Take Audio Focus</string>
+    <string name="take_audio_focus_summary">Enabling this will take audio focus when playing media. Any media playing in background will pause while the video is playing. (Restart app required)</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
