New Crowdin updates (#452)
* New translations strings.xml (Italian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (German)

* New translations strings.xml (German)

* New translations strings.xml (German)

* New translations strings.xml (Polish)

* New translations strings.xml (English)

* New translations strings.xml (Dutch)

* New translations strings.xml (German)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Romanian)

* New translations strings.xml (Romanian)

* New translations strings.xml (Romanian)

* New translations strings.xml (Italian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Italian)

* New translations strings.xml (Spanish)

* New translations strings.xml (Spanish)

* New translations strings.xml (Spanish)

* New translations strings.xml (Spanish)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -8,8 +8,8 @@
     <string name="request_permissions">请求权限</string>
     <string name="filter">排序方式</string>
     <string name="filter_recent">最新</string>
-    <string name="filter_nameAZ">名称（A-Z）</string>
-    <string name="filter_nameZA">名称（Z-A）</string>
+    <string name="filter_nameAZ">名称 (A-Z)</string>
+    <string name="filter_nameZA">名称 (Z-A)</string>
     <string name="filter_old">最旧</string>
     <string name="selected_s">选择了 %s 个</string>
     <string name="trash">回收站</string>
@@ -61,7 +61,7 @@
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
     <string name="use_as">设置为</string>
-    <string name="set_as">"设为："</string>
+    <string name="set_as">"设为： "</string>
     <string name="action_cancel">取消</string>
     <string name="action_confirm">确认</string>
     <string name="action_confirmed">已确认</string>
@@ -100,8 +100,8 @@
     <string name="album_card_size_summary">手动选择您的相册卡片尺寸</string>
     <string name="set_wallpaper">壁纸</string>
     <string name="set_wallpaper_error">没有可用的应用，无法设置壁纸！</string>
-    <string name="monthly_timeline_title">月度时间线</string>
-    <string name="monthly_timeline_summary">按月而非具体日期来进行时间线分组（需要重启应用）</string>
+    <string name="monthly_timeline_title">月度时间轴</string>
+    <string name="monthly_timeline_summary">按月而非具体日期来进行时间轴分组（需要重启应用）</string>
     <string name="amoled_mode_title">使用 AMOLED 模式</string>
     <string name="amoled_mode_summary">增强对比度，适合 AMOLED 屏幕</string>
     <string name="location_chip">位置：%s</string>
@@ -179,86 +179,86 @@
     <string name="permission_manage_files_title">管理所有文件</string>
     <string name="permission_manage_files_summary">"允许应用程序创建、修改和删除之前受系统限制的文件和相册。(包括图片和 DCIM 文件夹以外的相册以及 SD 卡中的相册"</string>
     <string name="allow_to_manage_files">允许管理所有文件</string>
-    <string name="vault">Vault</string>
-    <string name="tools">Tools</string>
+    <string name="vault">私密空间</string>
+    <string name="tools">工具</string>
     <string name="library">Library</string>
-    <string name="biometric_authentication">Biometric Authentication</string>
-    <string name="unlock_your_vault">Unlock your Vault</string>
-    <string name="add_media_to_vault_cd">Add Media to Vault</string>
-    <string name="vault_exists">Vault %1$s (%2$s) exists</string>
-    <string name="granted">Granted</string>
-    <string name="new_vault">New Vault</string>
-    <string name="delete_vault">Delete Vault</string>
-    <string name="unknown_vault">Unknown Vault</string>
-    <string name="hide">Hide</string>
-    <string name="ignored_albums_text">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a wildcard pattern to automatically hide any albums that matches it.</string>
-    <string name="no_ignored_albums">No ignored albums</string>
-    <string name="setup_ignored_albums">Setup ignored albums</string>
-    <string name="individual_album_selection">Individual Album Selection</string>
-    <string name="wildcard_creator">Wildcard Creator</string>
-    <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
-    <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
-    <string name="matched_albums">"Matched albums: %1$s"</string>
-    <string name="go_back">Go back</string>
-    <string name="continue_string">Continue</string>
-    <string name="apply">Apply</string>
-    <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
-    <string name="setup_label_input">Label</string>
-    <string name="setup_label_placeholder">Set your label</string>
-    <string name="setup_label_title">Ignored Albums</string>
-    <string name="setup_lavel_subtitle">Create</string>
-    <string name="setup_location_title">Options</string>
-    <string name="setup_location_subtitle">Where and who’s ignored</string>
-    <string name="setup_location_location_title">Where should be ignored</string>
-    <string name="setup_location_location_subtitle">The album and it’s content will be hidden depending where the location is set</string>
-    <string name="setup_location_options_albums">Albums</string>
-    <string name="setup_location_options_timeline">Timeline</string>
-    <string name="setup_location_options_both">Both</string>
-    <string name="setup_location_type_title">Who should be ignored</string>
-    <string name="setup_location_type_subtitle">You can select either a single album or create a Regex pattern to match multiple</string>
-    <string name="setup_location_types_selection">Selection</string>
-    <string name="setup_location_types_regex">Regex Pattern</string>
-    <string name="setup_type_selection_title">Selection</string>
-    <string name="setup_type_selection_subtitle">Select your to-be-ignored album</string>
-    <string name="setup_type_selection_add_album">Add album</string>
-    <string name="setup_type_selection_pick_album">Pick an album</string>
-    <string name="setup_type_regex_label">Regex Pattern</string>
-    <string name="setup_type_regex_summary">Ignore your albums automatically using a regular expression pattern matching.\n\nBefore continuing your pattern must be valid.</string>
-    <string name="setup_type_regex_title">Regex Pattern</string>
-    <string name="setup_type_regex_subtitle">Create a selection pattern</string>
-    <string name="setup_type_regex_example_title">Examples</string>
-    <string name="setup_type_regex_example_first_title">Match any album directly under the Music folder:</string>
+    <string name="biometric_authentication">生物特征认证</string>
+    <string name="unlock_your_vault">解锁你的私密空间</string>
+    <string name="add_media_to_vault_cd">将媒体添加到私密空间</string>
+    <string name="vault_exists">私密空间 %1$s (%2$s) 已存在</string>
+    <string name="granted">同意</string>
+    <string name="new_vault">新的私密空间</string>
+    <string name="delete_vault">删除私密空间</string>
+    <string name="unknown_vault">未知私密空间</string>
+    <string name="hide">隐藏</string>
+    <string name="ignored_albums_text">选择您不想在主时间线、专辑选项卡或两者中看到的相册。\n\n您可以选择单个相册，也可以创建通配符模式以自动隐藏与其匹配的任何相册。</string>
+    <string name="no_ignored_albums">没有忽略的相册</string>
+    <string name="setup_ignored_albums">设置忽略的相册</string>
+    <string name="individual_album_selection">个人相册选择</string>
+    <string name="wildcard_creator">通配符创建器</string>
+    <string name="wildcard_summary">通配符将用于匹配专辑名称或其路径。\n通配符可视为正则表达式模式。</string>
+    <string name="wildcard_summary_first">通配符：%1$s\n匹配的相册：%2$s</string>
+    <string name="matched_albums">"匹配的相册：%1$s"</string>
+    <string name="go_back">返回</string>
+    <string name="continue_string">继续</string>
+    <string name="apply">应用</string>
+    <string name="setup_label_info">选择您不想在主时间轴、相册选项卡或两者中看到的相册。\n\n您可以选择单个相册，也可以创建正则表达式模式来自动隐藏与其匹配的任何相册。</string>
+    <string name="setup_label_input">标签</string>
+    <string name="setup_label_placeholder">设置你的标签</string>
+    <string name="setup_label_title">忽略的相册</string>
+    <string name="setup_lavel_subtitle">创建</string>
+    <string name="setup_location_title">选项</string>
+    <string name="setup_location_subtitle">哪些地方和哪些人被忽视</string>
+    <string name="setup_location_location_title">哪些地方应该被忽略</string>
+    <string name="setup_location_location_subtitle">相册及其内容将根据位置设置而隐藏</string>
+    <string name="setup_location_options_albums">相册</string>
+    <string name="setup_location_options_timeline">时间轴</string>
+    <string name="setup_location_options_both">两者</string>
+    <string name="setup_location_type_title">谁应该被忽视</string>
+    <string name="setup_location_type_subtitle">您可以选择单张相册或创建正则表达式模式来匹配多个</string>
+    <string name="setup_location_types_selection">选择</string>
+    <string name="setup_location_types_regex">正则表达式模式</string>
+    <string name="setup_type_selection_title">选择</string>
+    <string name="setup_type_selection_subtitle">选择您要忽略的相册</string>
+    <string name="setup_type_selection_add_album">添加相册</string>
+    <string name="setup_type_selection_pick_album">选择一张相册</string>
+    <string name="setup_type_regex_label">正则表达式模式</string>
+    <string name="setup_type_regex_summary">使用正则表达式模式匹配自动忽略您的相册。\n\n继续之前您的模式必须有效。</string>
+    <string name="setup_type_regex_title">正则表达式模式</string>
+    <string name="setup_type_regex_subtitle">创建选择模式</string>
+    <string name="setup_type_regex_example_title">示例</string>
+    <string name="setup_type_regex_example_first_title">匹配“Music”文件夹下的任意相册：</string>
     <string name="setup_type_regex_first_subtitle">.*/Music/[^/]+/?$</string>
-    <string name="setup_type_regex_example_second_title">Match any album under the Music folder and its subfolders:</string>
+    <string name="setup_type_regex_example_second_title">匹配Music文件夹及其子文件夹下的任意相册：</string>
     <string name="setup_type_regex_example_second_subtitle">.*/Music/.+/[^/]+/?$</string>
-    <string name="setup_type_regex_example_third_title">Match any album starting with Album_ in the Music folder:</string>
+    <string name="setup_type_regex_example_third_title">匹配Music文件夹中以Album_开头的任何相册：</string>
     <string name="setup_type_regex_example_third_subtitle">.*/Music/Album_[^/]+/?$</string>
-    <string name="setup_type_regex_error">Invalid Regex Pattern</string>
-    <string name="setup_type_regex_error_second">This wildcard is already in use</string>
-    <string name="setup_confirmation_title">Confirmation</string>
-    <string name="setup_confirmation_subtitle">Overview your ignore options and matches</string>
-    <string name="setup_confirmation_where">Where should be ignored</string>
-    <string name="setup_confirmation_who">Who should be ignored</string>
-    <string name="setup_confirmation_matched">Matched Albums</string>
-    <string name="albums_and_timeline">Both Albums and Timeline</string>
-    <string name="created">Created</string>
-    <string name="filter_type_date">Date</string>
-    <string name="filter_type_name">Name</string>
-    <string name="images_videos"><![CDATA[%1$s Images & Videos]]></string>
-    <string name="auto_hide_searchbar">Hide search bar on scroll</string>
-    <string name="auto_hide_searchbar_summary">Automatically hide the search bar or the top bar of the screen while scrolling</string>
-    <string name="auto_hide_navigationbar">Hide navigation bar on scroll</string>
-    <string name="auto_hide_navigationbar_summary">Automatically hide the navigation bar while scrolling</string>
-    <string name="navigation">Navigation</string>
-    <string name="vault_setup_title">Setup your vault</string>
-    <string name="vault_setup_subtitle"><![CDATA[Encrypt your most private photos & videos]]></string>
-    <string name="vault_setup_name">Vault Name</string>
-    <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
-    <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
-    <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
-    <string name="ignored">Ignored</string>
-    <string name="location">Location</string>
-    <string name="update_file_name">Update file name</string>
+    <string name="setup_type_regex_error">无效的正则表达式模式</string>
+    <string name="setup_type_regex_error_second">此通配符已被使用</string>
+    <string name="setup_confirmation_title">确认</string>
+    <string name="setup_confirmation_subtitle">概述忽略选项和匹配项</string>
+    <string name="setup_confirmation_where">忽略哪些地方</string>
+    <string name="setup_confirmation_who">忽略哪一个</string>
+    <string name="setup_confirmation_matched">匹配的相册</string>
+    <string name="albums_and_timeline">相册和时间线</string>
+    <string name="created">创建</string>
+    <string name="filter_type_date">日期</string>
+    <string name="filter_type_name">名称</string>
+    <string name="images_videos"><![CDATA[%1$s 图片和视频]]></string>
+    <string name="auto_hide_searchbar">滚动时隐藏搜索栏</string>
+    <string name="auto_hide_searchbar_summary">滚动时自动隐藏搜索栏或屏幕顶部栏</string>
+    <string name="auto_hide_navigationbar">滚动时隐藏导航栏</string>
+    <string name="auto_hide_navigationbar_summary">滚动时自动隐藏导航栏</string>
+    <string name="navigation">导航</string>
+    <string name="vault_setup_title">设置你的私密空间</string>
+    <string name="vault_setup_subtitle"><![CDATA[加密您最私密的照片和视频]]></string>
+    <string name="vault_setup_name">私密空间名称</string>
+    <string name="vault_setup_security_error">请在设置保险库前设置手机安全措施。</string>
+    <string name="vault_setup_summary">您可以使用手机安全措施（密码或生物识别）访问私密空间\n\n可以在私密空间内部访问加密密钥，并将其用于恢复任何保险库。</string>
+    <string name="vault_already_exists">私密空间“%1$s”已存在</string>
+    <string name="ignored">忽略</string>
+    <string name="location">地点</string>
+    <string name="update_file_name">更新文件名</string>
     <plurals name="item_count">
         <item quantity="other">%s 个项目</item>
     </plurals>
