--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -131,7 +131,7 @@
     <string name="setup_summary">Um auf Medien dieses Geräts zugreifen zu können, müssen folgende Berechtigungen erteilt werden:</string>
     <string name="required">Erforderlich</string>
     <string name="optional">Optional</string>
-    <string name="permission_manage_media_title">edien verwalten</string>
+    <string name="permission_manage_media_title">Medien verwalten</string>
     <string name="permission_manage_media_summary">"Hiermit ist für bestimmte Aktionen (als Favorit markieren, Papierkorb verwalten, Metadaten bearbeiten usw.) keine manuelle Bestätigung mehr erforderlich"</string>
     <string name="read_media_images">Bilder einlesen</string>
     <string name="read_media_images_summary">Ermöglicht es der App, deine Bilder anzuzeigen</string>
@@ -202,9 +202,9 @@
     <string name="go_back">Zurück</string>
     <string name="continue_string">Weiter</string>
     <string name="apply">Anwenden</string>
-    <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
-    <string name="setup_label_input">Label</string>
-    <string name="setup_label_placeholder">Set your label</string>
+    <string name="setup_label_info">Wählen Sie aus, welche Alben Sie in der Haupt-Zeitleiste, in der Registerkarte \"Alben\" oder in beiden nicht sehen möchten.\n\nSie können entweder einzelne Alben auswählen oder ein Regex-Muster erstellen, um automatisch alle Alben auszublenden, die diesem Muster entsprechen.</string>
+    <string name="setup_label_input">Bezeichnung</string>
+    <string name="setup_label_placeholder">Ihr Label festlegen</string>
     <string name="setup_label_title">Ignorierte Alben</string>
     <string name="setup_lavel_subtitle">Erstellen</string>
     <string name="setup_location_title">Einstellungen</string>
@@ -223,42 +223,42 @@
     <string name="setup_type_selection_add_album">Album hinzufügen</string>
     <string name="setup_type_selection_pick_album">Album wählen</string>
     <string name="setup_type_regex_label">Regex Muster</string>
-    <string name="setup_type_regex_summary">Alben automatisch Ignorieren, indem ein reguläres Ausdrucksmuster(Regex) verwendet wird.\n\nBevor Sie fortfahren, muss Ihr Muster gültig sein.</string>
+    <string name="setup_type_regex_summary">Alben automatisch Ignorieren, indem ein reguläres Ausdrucksmuster (Regex) verwendet wird.\n\nBevor Sie fortfahren, muss Ihr Muster gültig sein.</string>
     <string name="setup_type_regex_title">Regex Muster</string>
     <string name="setup_type_regex_subtitle">Erstellen Sie ein Auswahlmuster</string>
     <string name="setup_type_regex_example_title">Beispiele</string>
-    <string name="setup_type_regex_example_first_title">Match any album directly under the Music folder:</string>
-    <string name="setup_type_regex_first_subtitle">.*/Music/[^/]+/?$</string>
-    <string name="setup_type_regex_example_second_title">Match any album under the Music folder and its subfolders:</string>
-    <string name="setup_type_regex_example_second_subtitle">.*/Music/.+/[^/]+/?$</string>
-    <string name="setup_type_regex_example_third_title">Match any album starting with Album_ in the Music folder:</string>
-    <string name="setup_type_regex_example_third_subtitle">.*/Music/Album_[^/]+/?$</string>
-    <string name="setup_type_regex_error">Invalid Regex Pattern</string>
-    <string name="setup_type_regex_error_second">This wildcard is already in use</string>
-    <string name="setup_confirmation_title">Confirmation</string>
-    <string name="setup_confirmation_subtitle">Overview your ignore options and matches</string>
-    <string name="setup_confirmation_where">Where should be ignored</string>
-    <string name="setup_confirmation_who">Who should be ignored</string>
-    <string name="setup_confirmation_matched">Matched Albums</string>
-    <string name="albums_and_timeline">Both Albums and Timeline</string>
-    <string name="created">Created</string>
-    <string name="filter_type_date">Date</string>
+    <string name="setup_type_regex_example_first_title">Finden Sie ein beliebiges Album direkt unter dem Ordner Musik:</string>
+    <string name="setup_type_regex_first_subtitle">.*/Musik/[^/]+/?$</string>
+    <string name="setup_type_regex_example_second_title">Finden Sie ein beliebiges Album im Ordner Musik und seinen Unterordnern:</string>
+    <string name="setup_type_regex_example_second_subtitle">.*/Musik/.+/[^/]+/?$</string>
+    <string name="setup_type_regex_example_third_title">Entspricht jedem Album, das mit Album_ im Musikordner beginnt:</string>
+    <string name="setup_type_regex_example_third_subtitle">.*/Musik/Album_[^/]+/?$</string>
+    <string name="setup_type_regex_error">Ungültiges Regex-Muster</string>
+    <string name="setup_type_regex_error_second">Dieser Platzhalter ist bereits in Gebrauch</string>
+    <string name="setup_confirmation_title">Bestätigung</string>
+    <string name="setup_confirmation_subtitle">Übersicht über Ihre Ignorieroptionen und Treffer</string>
+    <string name="setup_confirmation_where">Wo sollte ignoriert werden</string>
+    <string name="setup_confirmation_who">Wo sollte ignoriert werden</string>
+    <string name="setup_confirmation_matched">Passende Alben</string>
+    <string name="albums_and_timeline">Sowohl Alben als auch Zeitleiste</string>
+    <string name="created">Erstellt</string>
+    <string name="filter_type_date">Datum</string>
     <string name="filter_type_name">Name</string>
-    <string name="images_videos"><![CDATA[%1$s Images & Videos]]></string>
-    <string name="auto_hide_searchbar">Hide search bar on scroll</string>
-    <string name="auto_hide_searchbar_summary">Automatically hide the search bar or the top bar of the screen while scrolling</string>
-    <string name="auto_hide_navigationbar">Hide navigation bar on scroll</string>
-    <string name="auto_hide_navigationbar_summary">Automatically hide the navigation bar while scrolling</string>
+    <string name="images_videos"><![CDATA[%1$s Bilder und Videos]]></string>
+    <string name="auto_hide_searchbar">Suchleiste beim Scrollen ausblenden</string>
+    <string name="auto_hide_searchbar_summary">Automatisches Ausblenden der Suchleiste oder der oberen Leiste des Bildschirms beim Scrollen</string>
+    <string name="auto_hide_navigationbar">Ausblenden der Navigationsleiste beim Scrollen</string>
+    <string name="auto_hide_navigationbar_summary">Beim Scrollen automatisch die Navigationsleiste ausblenden</string>
     <string name="navigation">Navigation</string>
-    <string name="vault_setup_title">Setup your vault</string>
-    <string name="vault_setup_subtitle"><![CDATA[Encrypt your most private photos & videos]]></string>
-    <string name="vault_setup_name">Vault Name</string>
-    <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
-    <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
-    <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
-    <string name="ignored">Ignored</string>
-    <string name="location">Location</string>
-    <string name="update_file_name">Update file name</string>
+    <string name="vault_setup_title">Tresor einrichten</string>
+    <string name="vault_setup_subtitle"><![CDATA[Verschlüsseln Sie Ihre privaten Fotos & Videos]]></string>
+    <string name="vault_setup_name">Bezeichnung des Tresors</string>
+    <string name="vault_setup_security_error">Bitte richten Sie vor dem Einrichten des Tresors eine telefonische Sicherheitsmaßnahme ein.</string>
+    <string name="vault_setup_summary">Der Zugriff auf den Tresor erfolgt über die Sicherheitsvorkehrungen Ihres Telefons (Passwort oder biometrische Daten)\n\nDer Verschlüsselungsschlüssel kann im Tresor eingesehen werden und wird zur Wiederherstellung des Tresors verwendet.</string>
+    <string name="vault_already_exists">Tresor \"%1$s\" existiert bereits</string>
+    <string name="ignored">Ignoriert</string>
+    <string name="location">Standort</string>
+    <string name="update_file_name">Dateiname aktualisieren</string>
     <plurals name="item_count">
         <item quantity="one">%s Datei</item>
         <item quantity="other">%s Dateien</item>
