--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -61,7 +61,7 @@
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
     <string name="use_as">Usar como</string>
-    <string name="set_as">"Configurar como: "</string>
+    <string name="set_as">"Establecer como: "</string>
     <string name="action_cancel">Cancelar</string>
     <string name="action_confirm">Confirmar</string>
     <string name="action_confirmed">Confirmado</string>
@@ -147,86 +147,86 @@
     <string name="old_navbar_summary">Mostrar la antigua barra de navegación (con raíles para pantallas más grandes)</string>
     <string name="hide_timeline_for_albums">Ocultar la cronología de los álbumes</string>
     <string name="hide_timeline_for_album_summary">Oculta los encabezados de fecha al abrir un álbum</string>
-    <string name="allow_vibrations">Allow vibrations</string>
-    <string name="allow_vibrations_summary">Allow sending feedback as vibrations while performing some actions or gestures</string>
-    <string name="album_name">Album Name</string>
-    <string name="create_new_album">Create new album</string>
-    <string name="copy">Copy</string>
-    <string name="ignored_albums">Ignored Albums</string>
-    <string name="select_an_album">Select an album</string>
-    <string name="blacklist_summary">Ignore albums from Gallery</string>
-    <string name="add_to_ignored">Add to ignored albums</string>
-    <string name="add_to_ignored_summary">Remove an album from showing inside the Gallery</string>
-    <string name="remove_from_ignored">Remove from ignored list</string>
-    <string name="remove_from_ignored_summary">Remove from the ignored list the album named %1$s</string>
-    <string name="override">Override</string>
-    <string name="save_copy">Save Copy</string>
-    <string name="favorite">Favorite</string>
-    <string name="allow_to_manage_media">Allow to Manage Media</string>
-    <string name="set_default_launch_screen">Set default launch screen</string>
-    <string name="use_last_opened_screen">Use last opened screen</string>
-    <string name="timeline">Timeline</string>
-    <string name="albums">Albums</string>
-    <string name="launch_on_timeline">Launch on Timeline</string>
-    <string name="launch_on_albums">Launch on Albums</string>
-    <string name="launch_auto">Launch last screen when the app was closed</string>
-    <string name="set_default_screen">Set default screen</string>
-    <string name="done">Done</string>
-    <string name="toggle_audio_cd">Toggle audio</string>
-    <string name="auto">Auto</string>
-    <string name="change_playback_speed_cd">Change playback speed</string>
-    <string name="location_new_album">Location: Internal-Storage/%1$s</string>
-    <string name="permission_manage_files_title">Manage All Files</string>
-    <string name="permission_manage_files_summary">"Allows the app to create, modify, and delete files and albums that were previously restricted by the system. (Includes albums outside Pictures and DCIM folders and the ones from the SD Card"</string>
-    <string name="allow_to_manage_files">Allow to Manage All Files</string>
-    <string name="vault">Vault</string>
-    <string name="tools">Tools</string>
-    <string name="library">Library</string>
-    <string name="biometric_authentication">Biometric Authentication</string>
-    <string name="unlock_your_vault">Unlock your Vault</string>
-    <string name="add_media_to_vault_cd">Add Media to Vault</string>
-    <string name="vault_exists">Vault %1$s (%2$s) exists</string>
-    <string name="granted">Granted</string>
-    <string name="new_vault">New Vault</string>
-    <string name="delete_vault">Delete Vault</string>
-    <string name="unknown_vault">Unknown Vault</string>
-    <string name="hide">Hide</string>
-    <string name="ignored_albums_text">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a wildcard pattern to automatically hide any albums that matches it.</string>
-    <string name="no_ignored_albums">No ignored albums</string>
-    <string name="setup_ignored_albums">Setup ignored albums</string>
-    <string name="individual_album_selection">Individual Album Selection</string>
-    <string name="wildcard_creator">Wildcard Creator</string>
-    <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
-    <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
-    <string name="matched_albums">"Matched albums: %1$s"</string>
-    <string name="go_back">Go back</string>
-    <string name="continue_string">Continue</string>
-    <string name="apply">Apply</string>
-    <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
-    <string name="setup_label_input">Label</string>
-    <string name="setup_label_placeholder">Set your label</string>
-    <string name="setup_label_title">Ignored Albums</string>
-    <string name="setup_lavel_subtitle">Create</string>
-    <string name="setup_location_title">Options</string>
+    <string name="allow_vibrations">Permitir vibración</string>
+    <string name="allow_vibrations_summary">Permitir vibración como respuesta al hacer algunas acciones o gestos</string>
+    <string name="album_name">Nombre del álbum</string>
+    <string name="create_new_album">Crear nuevo álbum</string>
+    <string name="copy">Copiar</string>
+    <string name="ignored_albums">Álbumes ignorados</string>
+    <string name="select_an_album">Seleccionar un álbum</string>
+    <string name="blacklist_summary">Ignorar álbumes de la Galería</string>
+    <string name="add_to_ignored">Añadir a álbumes ignorados</string>
+    <string name="add_to_ignored_summary">Dejar de mostrar álbum en la galería</string>
+    <string name="remove_from_ignored">Sacar de la lista de ignorados</string>
+    <string name="remove_from_ignored_summary">Sacar el álbum llamado %1$s de la lista de ignorados</string>
+    <string name="override">Sobreescribir</string>
+    <string name="save_copy">Guardar una copia</string>
+    <string name="favorite">Favorita</string>
+    <string name="allow_to_manage_media">Permitir administrar archivos multimedia</string>
+    <string name="set_default_launch_screen">Configurar pantalla de inicio</string>
+    <string name="use_last_opened_screen">Usar última pantalla abierta</string>
+    <string name="timeline">Línea de tiempo</string>
+    <string name="albums">Carpetas</string>
+    <string name="launch_on_timeline">Abrir en línea de tiempo</string>
+    <string name="launch_on_albums">Abrir en álbumes</string>
+    <string name="launch_auto">Abrir última pantalla cuando la aplicación estaba cerrada</string>
+    <string name="set_default_screen">Configurar pantalla por defecto</string>
+    <string name="done">Hecho</string>
+    <string name="toggle_audio_cd">Activar sonido</string>
+    <string name="auto">Automático</string>
+    <string name="change_playback_speed_cd">Cambiar velocidad de reproducción</string>
+    <string name="location_new_album">Ubicación: Almacenamiento-Interno/%1$s</string>
+    <string name="permission_manage_files_title">Controlar todos los archivos</string>
+    <string name="permission_manage_files_summary">"Permite crear, modificar y eliminar ficheros y álbumes que fueron previamente restringidos por el sistema. (Incluyendo álbumes fuera de las carpetas Pictures y DCIM y las de la tarjeta SD"</string>
+    <string name="allow_to_manage_files">Permitir administrar todos los archivos</string>
+    <string name="vault">Bóveda</string>
+    <string name="tools">Herramientas</string>
+    <string name="library">Biblioteca</string>
+    <string name="biometric_authentication">Autenticación biométrica</string>
+    <string name="unlock_your_vault">Desbloquear tu Bóveda</string>
+    <string name="add_media_to_vault_cd">Añadir archivo a la Bóveda</string>
+    <string name="vault_exists">La Bóveda %1$s (%2$s) ya existe</string>
+    <string name="granted">Concedido</string>
+    <string name="new_vault">Nueva Bóveda</string>
+    <string name="delete_vault">Eliminar Bóveda</string>
+    <string name="unknown_vault">Bóveda Desconocida</string>
+    <string name="hide">Ocultar</string>
+    <string name="ignored_albums_text">Selecciona los álbumes que te gustaría ocultar de la pestaña de Línea de Tiempo, Álbumes o ambas.\n\nPuedes seleccionar tanto álbumes individuales como crear una expresión regular para ocultar automáticamente cualquier álbum que coincida con ella.</string>
+    <string name="no_ignored_albums">Ningún álbum ignorado</string>
+    <string name="setup_ignored_albums">Configurar álbumes ignorados</string>
+    <string name="individual_album_selection">Selección individual de álbumes</string>
+    <string name="wildcard_creator">Creador de comodines</string>
+    <string name="wildcard_summary">El comodín se usará para buscar coincidencias en el nombre de los álbumes o sus rutas.\nEl comodín puede ser una expresión regular.</string>
+    <string name="wildcard_summary_first">Comodín: %1$s\nÁlbumes encontrados: %2$s</string>
+    <string name="matched_albums">"Álbumes encontrados: %1$s"</string>
+    <string name="go_back">Volver</string>
+    <string name="continue_string">Continuar</string>
+    <string name="apply">Aplicar</string>
+    <string name="setup_label_info">Selecciona los álbumes que te gustaría ocultar de la pestaña de Línea de Tiempo, Álbumes o ambas.\n\nPuedes seleccionar tanto álbumes individuales como crear una expresión regular para ocultar automáticamente cualquier álbum que coincida con ella.</string>
+    <string name="setup_label_input">Etiqueta</string>
+    <string name="setup_label_placeholder">Establece tu etiqueta</string>
+    <string name="setup_label_title">Álbumes ignorados</string>
+    <string name="setup_lavel_subtitle">Crear</string>
+    <string name="setup_location_title">Opciones</string>
     <string name="setup_location_subtitle">Where and who’s ignored</string>
     <string name="setup_location_location_title">Where should be ignored</string>
     <string name="setup_location_location_subtitle">The album and it’s content will be hidden depending where the location is set</string>
-    <string name="setup_location_options_albums">Albums</string>
-    <string name="setup_location_options_timeline">Timeline</string>
-    <string name="setup_location_options_both">Both</string>
+    <string name="setup_location_options_albums">Álbumes</string>
+    <string name="setup_location_options_timeline">Línea de tiempo</string>
+    <string name="setup_location_options_both">Ambos</string>
     <string name="setup_location_type_title">Who should be ignored</string>
     <string name="setup_location_type_subtitle">You can select either a single album or create a Regex pattern to match multiple</string>
     <string name="setup_location_types_selection">Selection</string>
     <string name="setup_location_types_regex">Regex Pattern</string>
     <string name="setup_type_selection_title">Selection</string>
     <string name="setup_type_selection_subtitle">Select your to-be-ignored album</string>
-    <string name="setup_type_selection_add_album">Add album</string>
+    <string name="setup_type_selection_add_album">Añadir álbum</string>
     <string name="setup_type_selection_pick_album">Pick an album</string>
     <string name="setup_type_regex_label">Regex Pattern</string>
     <string name="setup_type_regex_summary">Ignore your albums automatically using a regular expression pattern matching.\n\nBefore continuing your pattern must be valid.</string>
     <string name="setup_type_regex_title">Regex Pattern</string>
     <string name="setup_type_regex_subtitle">Create a selection pattern</string>
-    <string name="setup_type_regex_example_title">Examples</string>
+    <string name="setup_type_regex_example_title">Ejemplos</string>
     <string name="setup_type_regex_example_first_title">Match any album directly under the Music folder:</string>
     <string name="setup_type_regex_first_subtitle">.*/Music/[^/]+/?$</string>
     <string name="setup_type_regex_example_second_title">Match any album under the Music folder and its subfolders:</string>
@@ -235,30 +235,30 @@
     <string name="setup_type_regex_example_third_subtitle">.*/Music/Album_[^/]+/?$</string>
     <string name="setup_type_regex_error">Invalid Regex Pattern</string>
     <string name="setup_type_regex_error_second">This wildcard is already in use</string>
-    <string name="setup_confirmation_title">Confirmation</string>
+    <string name="setup_confirmation_title">Confirmación</string>
     <string name="setup_confirmation_subtitle">Overview your ignore options and matches</string>
-    <string name="setup_confirmation_where">Where should be ignored</string>
-    <string name="setup_confirmation_who">Who should be ignored</string>
-    <string name="setup_confirmation_matched">Matched Albums</string>
-    <string name="albums_and_timeline">Both Albums and Timeline</string>
-    <string name="created">Created</string>
-    <string name="filter_type_date">Date</string>
-    <string name="filter_type_name">Name</string>
-    <string name="images_videos"><![CDATA[%1$s Images & Videos]]></string>
-    <string name="auto_hide_searchbar">Hide search bar on scroll</string>
-    <string name="auto_hide_searchbar_summary">Automatically hide the search bar or the top bar of the screen while scrolling</string>
-    <string name="auto_hide_navigationbar">Hide navigation bar on scroll</string>
-    <string name="auto_hide_navigationbar_summary">Automatically hide the navigation bar while scrolling</string>
+    <string name="setup_confirmation_where">Dónde se debe ignorar</string>
+    <string name="setup_confirmation_who">Quién debe ser ignorado</string>
+    <string name="setup_confirmation_matched">Álbumes encontrados</string>
+    <string name="albums_and_timeline">Álbumes y Línea de Tiempo</string>
+    <string name="created">Creado</string>
+    <string name="filter_type_date">Fecha</string>
+    <string name="filter_type_name">Nombre</string>
+    <string name="images_videos"><![CDATA[%1$s Imágenes y Videos]]></string>
+    <string name="auto_hide_searchbar">Ocultar la barra de búsqueda al desplazarse</string>
+    <string name="auto_hide_searchbar_summary">Ocultar automáticamente la barra de búsqueda o la barra superior de la pantalla al desplazarse</string>
+    <string name="auto_hide_navigationbar">Ocultar la barra de navegación al desplazarse</string>
+    <string name="auto_hide_navigationbar_summary">Ocultar automáticamente la barra de navegación al desplazarse</string>
     <string name="navigation">Navigation</string>
-    <string name="vault_setup_title">Setup your vault</string>
-    <string name="vault_setup_subtitle"><![CDATA[Encrypt your most private photos & videos]]></string>
-    <string name="vault_setup_name">Vault Name</string>
+    <string name="vault_setup_title">Configurar tu Bóveda</string>
+    <string name="vault_setup_subtitle"><![CDATA[Encripte sus fotos y videos más privados]]></string>
+    <string name="vault_setup_name">Nombre de la Bóveda</string>
     <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
     <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
-    <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
-    <string name="ignored">Ignored</string>
-    <string name="location">Location</string>
-    <string name="update_file_name">Update file name</string>
+    <string name="vault_already_exists">La Bóveda %1$s ya existe</string>
+    <string name="ignored">Ignorado</string>
+    <string name="location">Ubicación</string>
+    <string name="update_file_name">Actualizar nombre del archivo</string>
     <plurals name="item_count">
         <item quantity="one">%s Ítem</item>
         <item quantity="other">%s Ítems</item>
