--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -20,7 +20,7 @@
     <string name="no_media_cd">無可用媒體檔案</string>
     <string name="empty_trash_title">一塵不染</string>
     <string name="empty_trash_cd">已清空垃圾桶</string>
-    <string name="error_title">出現問題了 QQ</string>
+    <string name="error_title">出現問題了  :(</string>
     <string name="error_cd">發生錯誤</string>
     <string name="copy_error">複製錯誤</string>
     <string name="trash_restore">還原</string>
@@ -67,7 +67,7 @@
     <string name="action_confirmed">已確認</string>
     <string name="history_recent_title">最近</string>
     <string name="history_suggestions_title">建議</string>
-    <string name="no_media_found">未找到媒體</string>
+    <string name="no_media_found">無可用媒體檔案</string>
     <string name="image_add_description">新增描述</string>
     <string name="edit_cd">編輯</string>
     <string name="settings_theme_header">主題</string>
@@ -131,7 +131,7 @@
     <string name="setup_summary">欲瀏覽您的媒體，請授予下列權限：</string>
     <string name="required">必要</string>
     <string name="optional">可選</string>
-    <string name="permission_manage_media_title">媒體管理</string>
+    <string name="permission_manage_media_title">管理媒體</string>
     <string name="permission_manage_media_summary">"進行媒體相關操作時（如標記為收藏、管理垃圾桶、編輯相關資訊等），自動授予相片庫所需權限"</string>
     <string name="read_media_images">讀取圖片檔案</string>
     <string name="read_media_images_summary">允許讀取儲存空間中的圖片檔案</string>
@@ -177,88 +177,88 @@
     <string name="change_playback_speed_cd">更改播放速度</string>
     <string name="location_new_album">位置：內部儲存空間/%1$s</string>
     <string name="permission_manage_files_title">管理所有檔案</string>
-    <string name="permission_manage_files_summary">"允許此應用程式建立、修改和刪除裝置上的檔案和相簿。（包含 Pictures 和 DCIM 資料夾以外的所有資料夾）"</string>
+    <string name="permission_manage_files_summary">"允許此應用程式建立、修改和刪除裝置上的檔案和相簿。（Pictures 和 DCIM 資料夾以外的所有資料夾）"</string>
     <string name="allow_to_manage_files">允許管理所有檔案</string>
-    <string name="vault">Vault</string>
-    <string name="tools">Tools</string>
-    <string name="library">Library</string>
-    <string name="biometric_authentication">Biometric Authentication</string>
-    <string name="unlock_your_vault">Unlock your Vault</string>
-    <string name="add_media_to_vault_cd">Add Media to Vault</string>
-    <string name="vault_exists">Vault %1$s (%2$s) exists</string>
-    <string name="granted">Granted</string>
-    <string name="new_vault">New Vault</string>
-    <string name="delete_vault">Delete Vault</string>
-    <string name="unknown_vault">Unknown Vault</string>
-    <string name="hide">Hide</string>
-    <string name="ignored_albums_text">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a wildcard pattern to automatically hide any albums that matches it.</string>
-    <string name="no_ignored_albums">No ignored albums</string>
-    <string name="setup_ignored_albums">Setup ignored albums</string>
-    <string name="individual_album_selection">Individual Album Selection</string>
-    <string name="wildcard_creator">Wildcard Creator</string>
-    <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
-    <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
-    <string name="matched_albums">"Matched albums: %1$s"</string>
-    <string name="go_back">Go back</string>
-    <string name="continue_string">Continue</string>
-    <string name="apply">Apply</string>
-    <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
-    <string name="setup_label_input">Label</string>
-    <string name="setup_label_placeholder">Set your label</string>
-    <string name="setup_label_title">Ignored Albums</string>
-    <string name="setup_lavel_subtitle">Create</string>
-    <string name="setup_location_title">Options</string>
-    <string name="setup_location_subtitle">Where and who’s ignored</string>
-    <string name="setup_location_location_title">Where should be ignored</string>
-    <string name="setup_location_location_subtitle">The album and it’s content will be hidden depending where the location is set</string>
-    <string name="setup_location_options_albums">Albums</string>
-    <string name="setup_location_options_timeline">Timeline</string>
-    <string name="setup_location_options_both">Both</string>
-    <string name="setup_location_type_title">Who should be ignored</string>
-    <string name="setup_location_type_subtitle">You can select either a single album or create a Regex pattern to match multiple</string>
-    <string name="setup_location_types_selection">Selection</string>
-    <string name="setup_location_types_regex">Regex Pattern</string>
-    <string name="setup_type_selection_title">Selection</string>
-    <string name="setup_type_selection_subtitle">Select your to-be-ignored album</string>
-    <string name="setup_type_selection_add_album">Add album</string>
-    <string name="setup_type_selection_pick_album">Pick an album</string>
-    <string name="setup_type_regex_label">Regex Pattern</string>
-    <string name="setup_type_regex_summary">Ignore your albums automatically using a regular expression pattern matching.\n\nBefore continuing your pattern must be valid.</string>
-    <string name="setup_type_regex_title">Regex Pattern</string>
-    <string name="setup_type_regex_subtitle">Create a selection pattern</string>
-    <string name="setup_type_regex_example_title">Examples</string>
-    <string name="setup_type_regex_example_first_title">Match any album directly under the Music folder:</string>
+    <string name="vault">私密空間</string>
+    <string name="tools">工具</string>
+    <string name="library">媒體庫</string>
+    <string name="biometric_authentication">生物辨識</string>
+    <string name="unlock_your_vault">解鎖私密空間</string>
+    <string name="add_media_to_vault_cd">將媒體新增至私密空間</string>
+    <string name="vault_exists">已存在私密空間 %1$s (%2$s)</string>
+    <string name="granted">已授予</string>
+    <string name="new_vault">新增私密空間</string>
+    <string name="delete_vault">刪除私密空間</string>
+    <string name="unknown_vault">未知私密空間</string>
+    <string name="hide">隱藏</string>
+    <string name="ignored_albums_text">選擇要在時間軸、相簿標籤或完全隱藏的相簿。\n\n您可手動選擇，或建立萬用字元配對來自動隱藏符合條件的相簿。</string>
+    <string name="no_ignored_albums">無隱藏相簿</string>
+    <string name="setup_ignored_albums">設定隱藏相簿</string>
+    <string name="individual_album_selection">選擇個別相簿</string>
+    <string name="wildcard_creator">萬用字元建立工具</string>
+    <string name="wildcard_summary">使用萬用字元 (Wildcard) 來搜尋相簿名稱或路徑。\n支援正規表示式。</string>
+    <string name="wildcard_summary_first">萬用字元：%1$s\n符合的相簿: %2$s</string>
+    <string name="matched_albums">"符合的相簿：%1$s"</string>
+    <string name="go_back">返回</string>
+    <string name="continue_string">繼續</string>
+    <string name="apply">套用</string>
+    <string name="setup_label_info">選擇要在時間軸、相簿標籤或完全隱藏的相簿。\n\n您可手動選擇，或建立正規表示式配對來自動隱藏符合條件的相簿。</string>
+    <string name="setup_label_input">標籤</string>
+    <string name="setup_label_placeholder">設定你的標籤</string>
+    <string name="setup_label_title">隱藏的相簿</string>
+    <string name="setup_lavel_subtitle">建立</string>
+    <string name="setup_location_title">選項</string>
+    <string name="setup_location_subtitle">隱藏位置和相簿</string>
+    <string name="setup_location_location_title">在這些地方隱藏</string>
+    <string name="setup_location_location_subtitle">相簿與內容將根據設定位置隱藏</string>
+    <string name="setup_location_options_albums">相簿</string>
+    <string name="setup_location_options_timeline">時間軸</string>
+    <string name="setup_location_options_both">全部</string>
+    <string name="setup_location_type_title">隱藏這些相簿</string>
+    <string name="setup_location_type_subtitle">可選擇單一相簿，或使用正規表示式來自動符合多個相簿</string>
+    <string name="setup_location_types_selection">選擇</string>
+    <string name="setup_location_types_regex">正規表示式模式</string>
+    <string name="setup_type_selection_title">選擇</string>
+    <string name="setup_type_selection_subtitle">選擇要隱藏的相簿</string>
+    <string name="setup_type_selection_add_album">新增相簿</string>
+    <string name="setup_type_selection_pick_album">選擇相簿</string>
+    <string name="setup_type_regex_label">正規表示式模式</string>
+    <string name="setup_type_regex_summary">使用正規表示式自動搜尋並隱藏相簿。\n\n請確認規則有效。</string>
+    <string name="setup_type_regex_title">正規表示式模式</string>
+    <string name="setup_type_regex_subtitle">建立符合規則</string>
+    <string name="setup_type_regex_example_title">範例</string>
+    <string name="setup_type_regex_example_first_title">符合 Music 資料夾中的所有相簿：</string>
     <string name="setup_type_regex_first_subtitle">.*/Music/[^/]+/?$</string>
-    <string name="setup_type_regex_example_second_title">Match any album under the Music folder and its subfolders:</string>
+    <string name="setup_type_regex_example_second_title">符合 Music 資料夾與子資料夾中的所有相簿：</string>
     <string name="setup_type_regex_example_second_subtitle">.*/Music/.+/[^/]+/?$</string>
-    <string name="setup_type_regex_example_third_title">Match any album starting with Album_ in the Music folder:</string>
+    <string name="setup_type_regex_example_third_title">符合 Music 資料夾中以 Album_ 開頭的所有相簿：</string>
     <string name="setup_type_regex_example_third_subtitle">.*/Music/Album_[^/]+/?$</string>
-    <string name="setup_type_regex_error">Invalid Regex Pattern</string>
-    <string name="setup_type_regex_error_second">This wildcard is already in use</string>
-    <string name="setup_confirmation_title">Confirmation</string>
-    <string name="setup_confirmation_subtitle">Overview your ignore options and matches</string>
-    <string name="setup_confirmation_where">Where should be ignored</string>
-    <string name="setup_confirmation_who">Who should be ignored</string>
-    <string name="setup_confirmation_matched">Matched Albums</string>
-    <string name="albums_and_timeline">Both Albums and Timeline</string>
-    <string name="created">Created</string>
-    <string name="filter_type_date">Date</string>
-    <string name="filter_type_name">Name</string>
-    <string name="images_videos"><![CDATA[%1$s Images & Videos]]></string>
-    <string name="auto_hide_searchbar">Hide search bar on scroll</string>
-    <string name="auto_hide_searchbar_summary">Automatically hide the search bar or the top bar of the screen while scrolling</string>
-    <string name="auto_hide_navigationbar">Hide navigation bar on scroll</string>
-    <string name="auto_hide_navigationbar_summary">Automatically hide the navigation bar while scrolling</string>
-    <string name="navigation">Navigation</string>
-    <string name="vault_setup_title">Setup your vault</string>
-    <string name="vault_setup_subtitle"><![CDATA[Encrypt your most private photos & videos]]></string>
-    <string name="vault_setup_name">Vault Name</string>
-    <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
-    <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
-    <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
-    <string name="ignored">Ignored</string>
-    <string name="location">Location</string>
-    <string name="update_file_name">Update file name</string>
+    <string name="setup_type_regex_error">正規表示式無效</string>
+    <string name="setup_type_regex_error_second">已使用此萬用字元</string>
+    <string name="setup_confirmation_title">確認</string>
+    <string name="setup_confirmation_subtitle">隱藏概覽</string>
+    <string name="setup_confirmation_where">在這些地方隱藏</string>
+    <string name="setup_confirmation_who">隱藏這些相簿</string>
+    <string name="setup_confirmation_matched">匹配的相簿</string>
+    <string name="albums_and_timeline">相簿和時間軸</string>
+    <string name="created">已建立</string>
+    <string name="filter_type_date">日期</string>
+    <string name="filter_type_name">名稱</string>
+    <string name="images_videos"><![CDATA[%1$s 圖片與影片]]></string>
+    <string name="auto_hide_searchbar">隱藏搜尋列</string>
+    <string name="auto_hide_searchbar_summary">捲動時自動隱藏搜尋列與頂欄</string>
+    <string name="auto_hide_navigationbar">隱藏導覽列</string>
+    <string name="auto_hide_navigationbar_summary">捲動時自動隱藏導覽列</string>
+    <string name="navigation">導航</string>
+    <string name="vault_setup_title">設定你的私密空間</string>
+    <string name="vault_setup_subtitle"><![CDATA[輕鬆加密私人照片和影片]]></string>
+    <string name="vault_setup_name">私密空間名稱</string>
+    <string name="vault_setup_security_error">請先設定螢幕鎖定。</string>
+    <string name="vault_setup_summary">私密空間使用螢幕鎖定解鎖（密碼或生物辨識）。\n\n可於私密空間中存取加密金鑰，供必要時還原無法存取的私密空間。</string>
+    <string name="vault_already_exists">已存在私密空間「%1$s」</string>
+    <string name="ignored">已隱藏</string>
+    <string name="location">地點</string>
+    <string name="update_file_name">更新檔名</string>
     <plurals name="item_count">
         <item quantity="other">%s 個項目</item>
     </plurals>
